--- a/assessment/assessment.css
+++ b/assessment/assessment.css
@@ -1,7 +1,7 @@
 body {
   background-color: #6a5acd;
   color: #fdffff;
-  width: 500px;
+  max-width: 500px;
   margin-right: auto;
   margin-left: auto;
 }
