--- a/portfolio.css
+++ b/portfolio.css
@@ -28,16 +28,15 @@ body {
 
 #header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   padding: 10px 20px;
   background-color: #f0f0f0;
   border-bottom: 2px solid var(--theme-color);
 }
 
 .logo {
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .logo-title {
@@ -51,7 +50,7 @@ body {
 }
 
 nav {
-  display: flex;
+  width: 100%;
 }
 
 ul {
@@ -59,6 +58,7 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  justify-content: flex-end;
 }
 
 li {
@@ -116,4 +116,32 @@ th {
 th, td {
   border: solid 1px #f0f0f0;
   padding: 0.5rem;
+}
+
+/* --------------------
+        レスポンシブデザイン
+-------------------- */
+
+@media (max-width: 768px) {
+  ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  li {
+    margin: 5px 0;
+  }
+
+  #header {
+    align-items: center;
+  }
+
+  .logo {
+    align-items: center;
+    text-align: center;
+  }
+
+  nav {
+    width: auto;
+  }
 }
