--- a/portfolio.css
+++ b/portfolio.css
@@ -19,61 +19,6 @@ body {
   margin: 0;
   padding: 30px;
   color: #333;
-  font-family: Arial, sans-serif;
-}
-
-/* --------------------
-        ヘッダー
--------------------- */
-
-#header {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 10px 20px;
-  background-color: #f0f0f0;
-  border-bottom: 2px solid var(--theme-color);
-}
-
-.logo {
-  margin-bottom: 10px;
-}
-
-.logo-title {
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.logo-desc {
-  font-size: 1em;
-  color: #666;
-}
-
-nav {
-  width: 100%;
-}
-
-ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  justify-content: flex-end;
-}
-
-li {
-  margin: 0 10px;
-  display: flex;
-  align-items: center;
-}
-
-li i {
-  margin-right: 5px;
-}
-
-a {
-  color: var(--theme-color);
-  text-decoration: none;
 }
 
 /* --------------------
@@ -89,12 +34,25 @@ h1, h2, h3 {
         リンク
 -------------------- */
 
-a:hover {
-  text-decoration: underline;
+a {
+  color: var(--theme-color);
+  text-decoration: none;
 }
 
 /* --------------------
-        表
+        リスト
+-------------------- */
+
+ul {
+  list-style: none;
+}
+li:before {
+  content: "★";
+  color: var(--theme-color);
+}
+
+/* --------------------
+          表
 -------------------- */
 
 table {
@@ -116,32 +74,4 @@ th {
 th, td {
   border: solid 1px #f0f0f0;
   padding: 0.5rem;
-}
-
-/* --------------------
-        レスポンシブデザイン
--------------------- */
-
-@media (max-width: 768px) {
-  ul {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  li {
-    margin: 5px 0;
-  }
-
-  #header {
-    align-items: center;
-  }
-
-  .logo {
-    align-items: center;
-    text-align: center;
-  }
-
-  nav {
-    width: auto;
-  }
 }
