--- a/portfolio.css
+++ b/portfolio.css
@@ -157,45 +157,58 @@ th, td {
 /* Specific styles for Profile and Works sections */
 #profile ul,
 #works ul {
-  display: block;
+  display: flex;
+  flex-direction: column;
   padding-left: 0;
 }
 
 #profile ul li,
 #works ul li {
-  display: block;
+  display: flex;
   padding: 5px 0;
   margin-left: 0;
+  width: 100%;
 }
 
-.profile-list,
-.works-list {
+.works-list > li > ul {
+  list-style-type: circle;
+  margin-left: 20px;
+}
+
+.profile-list, .works-list {
   list-style-type: disc;
   margin-left: 20px;
   padding-left: 0;
 }
 
-.profile-list li,
-.works-list li {
+.profile-list li, .works-list li {
   display: list-item;
   padding: 5px 0;
+  margin-left: 0;
+}
+
+.profile-list, .works-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile-list li, .works-list li {
+  display: list-item;
   margin-left: 0;
 }
 
 .works-list > li > ul {
   list-style-type: circle;
   margin-left: 20px;
-  padding-left: 0;
 }
 
+/* Additional specific styles for nested lists */
 .works-list > li > ul > li {
-  margin-left: 0; /* Remove extra margin */
-  padding-left: 0; /* Remove extra padding */
+  margin-left: 20px;  /* Add margin to nested list items */
+  padding-left: 10px;
 }
 
-/* Ensure no text overlap */
-#profile, #works {
-  width: 100%;
-  overflow: hidden;
-  white-space: normal;
+.works-list > li > ul > li a {
+  margin-left: 10px;  /* Add margin to nested list links */
 }
