--- a/portfolio.css
+++ b/portfolio.css
@@ -13,10 +13,11 @@
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   padding: 30px;
   color: #333;
   font-family: Arial, sans-serif;
@@ -56,12 +57,9 @@ nav {
 }
 
 ul {
-  display: flex;
   list-style: none;
   padding: 0;
   margin: 0;
-  justify-content: center;
-  flex-wrap: wrap;
 }
 
 li {
@@ -136,12 +134,12 @@ th, td {
     margin-bottom: 5px;
   }
 
-  ul {
+  nav ul {
     flex-direction: column;
     align-items: center;
   }
 
-  li {
+  nav li {
     margin: 5px 0;
   }
 
@@ -186,5 +184,6 @@ th, td {
 /* Ensure no text overlap */
 #profile, #works {
   width: 100%;
-  overflow: hidden;
+  overflow: visible;
+  white-space: normal;
 }
